# CUDA-Agent

./: README.md  pyproject.toml
agent/: loop.py  reward.py
agent/workdir/: SKILL_TRITON.md
agent/workdir/utils/: profiling_triton.py  verification_triton.py
configs/: cuda_pipeline.yaml  triton_pipeline.yaml
data/: common.py
data/crawl/: crawl_torch_ops.py  crawl_transformers_ops.py  op_schema.py
data/dataset/: build_dataset.py  upload_dataset.py
data/filter/: _filter_worker.py  decontaminate.py  filter_pipeline.py  filter_schema.py
data/raw/: torch_ops.jsonl  torch_ops_stats.json  transformers_ops_stats.json
data/synthesis/: synthesis_prompts.py  synthesize_fused_ops.py
eval/: eval_kernelbench.py  eval_tritonbench.py  metrics.py
scripts/: run_data_pipeline.sh  run_eval.sh  run_training.sh
train/: agentic_rl.py  rft.py  single_turn_warmup.py  utils.py  value_pretrain.py
